fix(style): hide overflow on dom root elements in global style

--- a/renderer/style.css
+++ b/renderer/style.css
@@ -1,3 +1,4 @@
 html, body, #__next {
   height: 100%;
+  overflow: hidden;
 }
